First iteration of create_folders()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,18 @@
 Package: sling.workflow
-Type: Package
 Title: Data analysis workflow tools of SLING lab
-Version: 0.1.0
-Author: Zaw Myo Tun
-Maintainer: Zaw Myo Tun <zawmyotun11@gmail.com>
+Version: 0.0.0.9000
+Authors@R: 
+    person(given = "Zaw Myo",
+           family = "Tun",
+           role = c("aut", "cre"),
+           email = "zawmyotun11@gmail.com",
+           comment = c(ORCID = "0000-0002-7035-4600"))
 Description: This is a collection of functions that facilitates data analysis workflow for lab members.
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
