DESCRIPTION minor edit

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "zawmyotun11@gmail.com",
            comment = c(ORCID = "0000-0002-7035-4600"))
-Description: This is a collection of functions that facilitates data analysis workflow for lab members.
+Description: A collection of functions that facilitates data analysis workflow.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
